discussion/kv_engine/173510/173510_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-35297: Add "wait-for-persistence" to rangeScanCreate

Add to the range-scan-create path a "wait-for-persistence" for
feature which allows the clients creation to specify a uuid/seqno
and timeout.

If the vbucket uuid matches and the seqno hasn't been persisted
the command will wait for the timeout (using ewouldblock).

This now means that the range-scan-create path now can perform two
ewouldblock steps.

1) The wait for persistence to be satisfied and notify
2) The wait for RangeScanCreateTask to run and notify

The state a in-progress range-scan-create is in is now captured in the
state variable which is stored in the engine-specific.

Pending is the initial state
WaitForPersistence waiting for SeqnoPersistenceRequest
Create waiting for RangeScanCreateTask

Change-Id: I100ab255b6a46ca85c807a0f38c132c81bab936a

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Jim Walker
Date: 2022-04-08 19:19:03.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-04-08 20:58:01.000000000
Message: 
Patch Set 1: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/37956/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/range_scans/range_scan_types.h:42:24:
error: no member named "chrono" in namespace "std"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/37956/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/16595/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/ephemeral_vb.cc:277:11: error: member access into incomplete type "KVBucket" [clang-diagnostic-error]
    bucket->addVbucketWithSeqnoPersistenceRequest(
          ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/vbucket.h:52:7: note: forward declaration of "KVBucket"
class KVBucket;
      ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/range_scans/range_scan_types.h:42:10: error: no template named "optional" in namespace "std" [clang-diagnostic-error]
    std::optional<std::chrono::milliseconds> timeout;
         ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/range_scans/range_scan_types.h:42:24: error: no member named "chrono" in namespace "std" [clang-diagnostic-error]
    std::optional<std::chrono::milliseconds> timeout;
                       ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/vbucket.h:87:13: warning: pass by value and use std::move [modernize-pass-by-value]
            std::function<void(const SeqnoPersistenceRequest&)> timedout)
            ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/16595/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/ephemeral_vb.cc:277:11:
error: member access into incomplete type "KVBucket" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/16595/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/19398/ : FAILURE

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/19398/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/26773/ : FAILURE

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/45189/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/15524/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/17463/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/18366/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/18703/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/6244/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/6306/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Jim Walker
Date: 2022-05-10 09:27:57.000000000
Message: 
Abandoned
----------------------------------------------------------------------------------------------------------------------
